# rust-microservices

./: Cargo.toml  README.md  trust-policy.json
.github/workflows/: ci.yml  deploy.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
infra/appconfig/: feature-flags.json  feature-flags.yaml
infra/cdk/: package.json  tsconfig.json
infra/cdk/lib/: api-stack.ts  canary.ts  platform-stack.ts  projector-orders-stack.ts  projector-users-stack.ts
infra/scripts/: deploy.sh  synth.sh
services/api/: Cargo.toml
services/api/src/: main.rs
services/projector_orders/: Cargo.toml
services/projector_orders/src/: main.rs
services/projector_users/: Cargo.toml
services/projector_users/src/: main.rs
