[workspace]
resolver = "2"
members = [
  "crates/common",
  "services/api",
  "services/projector_orders",
  "services/projector_users",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
aws-config = "1"
aws-sdk-eventbridge = "1"
aws-sdk-dynamodb = "1"
aws-sdk-appconfigdata = "1"
lambda_http = "0.11"
lambda_runtime = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_yaml = "0.9"
